Closed Bug 1683330 Opened 5 years ago Closed 5 years ago

NVDA screen reader doesn’t read the print preview options

Categories

(Core :: Disability Access APIs, defect)

Firefox 86
All
Windows
defect

Tracking

()

VERIFIED FIXED
86 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox84 --- unaffected
firefox85 --- verified
firefox86 --- verified

People

(Reporter: emilghitta, Assigned: eeejay)

References

(Blocks 1 open bug, Regression)

Details

(Keywords: regression, Whiteboard: [print2020_v86])

Attachments

(1 file)

Affected versions

  • Firefox 86.0a1 (BuildId:20201218095607)
  • Firefox 85.0b4 (BuildId:20201220193140) - Since the regressor got uplifted.

Affected platforms

  • Windows 10 64bit (NVDA version 2020.3)

Steps to reproduce

  1. Launch Firefox.
  2. Open a random webpage
  3. Hit CTRL + P in order to open the print preview.
  4. Tab through the available print preview options.

Expected result

  • NVDA reads all the available print preview options.

Actual result

  • NVDA doesn’t read the print preview options.

Regression Range

Notes

  • Also, it seems that, sometimes, the focus is put behind the actual print preview (on the actual webpage).
  • [Suggested Severity] I think that S2 fits for this issue.

Hello Eitan,

It seems that mozregression pointed out Bug 1682692 for causing this regression.

Can you please take a look?

Thank you!

Flags: needinfo?(eitan)

(Adding the [print2020_v86] whiteboard tag so that it stays on our radar…)

Whiteboard: [print2020_v86]

Indeed the print dialog is not getting inserted into the accessible tree. I'll take a look.

Assignee: nobody → eitan
Flags: needinfo?(eitan)

This change that was introduced in bug 1682692 was not actually tested
and is unrelated to the fix. I thought that this was more correct, and I
added it. But this change should be reverted.

Pushed by eisaacson@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/d5d011725ca9 Revert skipping inserted node when using TreeWalker.Next in insertion iterator. r=yzen
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 86 Branch

It seems that this issue affects Firefox 85.0b4 (BuildId:20201220193140) as well since Bug 1682692 (regressor) got uplifted.

I can confirm that this issue is verified fixed using Firefox 86.0a1 (BuildId:20201221093813) on Windows 10 64bit with NVDA version 2020.3.

The patch landed in nightly and beta is affected.
:eeejay, is this bug important enough to require an uplift?
If not please set status_beta to wontfix.

For more information, please visit auto_nag documentation.

Flags: needinfo?(eitan)

Comment on attachment 9194028 [details]
Bug 1683330 - Revert skipping inserted node when using TreeWalker.Next in insertion iterator. r?morgan!

Beta/Release Uplift Approval Request

  • User impact if declined: Print dialog will no longer be accessible to screen readers
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: Yes
  • If yes, steps to reproduce: With NVDA or VoiceOver, open the print dialog. Note that the print dialog is spoken and accessible.
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): This reverts a small unwarranted change from a previous patch.
  • String changes made/needed:
Flags: needinfo?(eitan)
Attachment #9194028 - Flags: approval-mozilla-beta?
Flags: qe-verify+
QA Whiteboard: [qa-triaged]

Comment on attachment 9194028 [details]
Bug 1683330 - Revert skipping inserted node when using TreeWalker.Next in insertion iterator. r?morgan!

approved for 85.0b5

Attachment #9194028 - Flags: approval-mozilla-beta? → approval-mozilla-beta+

This issue is verified fixed using Firefox 85.0b6 (BuildId:20210107185759) on Windows 10 64bit with NVDA & macOS 10.14 with VoiceOver.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: