Bug 1683330 - Revert skipping inserted node when using TreeWalker.Next in insertion iterator. r=yzen

This change that was introduced in bug 1682692 was not actually tested
and is unrelated to the fix. I thought that this was more correct, and I
added it. But this change should be reverted.

Differential Revision: https://phabricator.services.mozilla.com/D100169